# OptimaX

./: .gitignore  CMakeLists.txt  Dockerfile  kernel.c  linker.ld  verify_bootloader.cmake
src/bootloader/: CMakeLists.txt
src/bootloader/i386/pc/: boot.asm  linker.ld  second_stage.asm  second_stage.c  second_stage_stub.asm
src/kernel/: CMakeLists.txt
